Fix aggregate model using wrong axes