@@ -1,6 +1,7 @@
 package com.lucaswarwick02.Models;
 
 import tech.tablesaw.api.DoubleColumn;
+import tech.tablesaw.api.IntColumn;
 import tech.tablesaw.api.Table;
 import tech.tablesaw.columns.Column;
 import tech.tablesaw.plotly.Plot;
@@ -32,6 +33,8 @@ public class AggregateModel {
 
         HashMap<String, DoubleColumn> newColumns = new HashMap<>();
 
+        IntColumn timeColumn = IntColumn.create("Time");
+
         // For each column ( excluding 0 ) ...
         for (int columnNumber = 1; columnNumber < numberOfColumns; columnNumber++) {
             // ... Create Min, Max and Mean columns
@@ -42,13 +45,14 @@ public class AggregateModel {
             }
         }
 
-        for (int r = 0; r < results[0].rowCount(); r++) {
-            for (int c = 1; c < results[0].columnCount(); c++) {
+        for (int r = 0; r < numberOfRows; r++) {
+            for (int c = 1; c < numberOfColumns; c++) {
                 String columnName = results[0].column(c).name();
                 String[] newColumnNames = { columnName + "_Min", columnName + "_Max", columnName + "_Mean" };
                 int finalR = r;
                 int finalC = c;
-                List<Double> values = Arrays.stream(results).mapToDouble(resultsTable -> resultsTable.row(finalR).getInt(finalC)).boxed().collect(Collectors.toList());
+                List<Double> values = Arrays.stream( results )
+                        .mapToDouble( resultsTable -> resultsTable.row( finalR ).getInt( finalC ) ).boxed().toList();
                 double average = values.stream().mapToDouble(a -> a).average().orElse(Double.NaN);
                 double min = values.stream().mapToDouble(a -> a).min().orElse(Double.NaN);
                 double max = values.stream().mapToDouble(a -> a).max().orElse(Double.NaN);
@@ -56,9 +60,10 @@ public class AggregateModel {
                 newColumns.get(newColumnNames[1]).append(max);
                 newColumns.get(newColumnNames[2]).append(average);
             }
+            timeColumn.append( r );
         }
 
-        Table table = Table.create("Aggregate " + results[0].name());
+        Table table = Table.create("Aggregate " + results[0].name()).addColumns( timeColumn );
         newColumns.values().forEach(table::addColumns);
         return table;
     }
